# IDS---Insect-Defense-System

./: CMakeLists.txt  README.md
include/devices/: Camera.h  Laser.h
src/devices/: Camera.cpp  Laser.cpp
